--- a/Blooger/index.html
+++ b/Blooger/index.html
@@ -21,6 +21,12 @@
                 <a href="#" class="text-gray">Blooger</a>
             </div>
 
+            <div class="toggle-collapse">
+                <div class="toggle-icons">
+                    <i class="fas fa-bars"></i>
+                </div>
+            </div>
+
             <div>
                 <ul class="nav-items">
                     <li class="nav-link">
@@ -56,6 +62,9 @@
 
     <!-- / ----------------- / Navigation / ----------------- / -->
     
+    <!-- Jquery Library -->
+<script src="./js/Jquery3.5.1.min.js"></script>
+
     <!-- Custom Javascript -->
 <script src="./js/main.js"></script>
 </body>
