Добавлен move-up

--- a/Blooger/index.html
+++ b/Blooger/index.html
@@ -405,6 +405,10 @@
                 </div>
             </div>
         </div>
+
+        <div class="move-up">
+            <span><i class="fas fa-arrow-circle-up fa-2x"></i></span>
+        </div>
     </footer>
 
     <!-- / ------------ / Footer / ------------ / -->
